<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="daysViewModel"
            type="com.vm.timemanager.viewModel.DaysViewModel" />
    </data>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/monday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/monday"
        android:textSize="16sp"
        android:layout_marginVertical="5dp"/>

    <Button
        android:id="@+id/tuesday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tuesday"
        android:textSize="16sp"
        android:layout_marginVertical="5dp"/>

    <Button
        android:id="@+id/wednesday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wednesday"
        android:textSize="16sp"
        android:layout_marginVertical="5dp"/>

    <Button
        android:id="@+id/thursday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thursday"
        android:textSize="16sp"
        android:layout_marginVertical="5dp"/>

    <Button
        android:id="@+id/friday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/friday"
        android:textSize="16sp"
        android:layout_marginVertical="5dp"/>

    <Button
        android:id="@+id/saturday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/saturday"
        android:textSize="16sp"
        android:layout_marginVertical="5dp"/>

    <Button
        android:id="@+id/sunday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sunday"
        android:textSize="16sp"
        android:layout_marginVertical="5dp"/>

</LinearLayout>

</layout>